workloads/memos/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  labels:
    app.kubernetes.io/version: v1
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
        app.kubernetes.io/version: v1
    spec:
      securityContext:
        fsGroup: 10001
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: memos
          image: neosmemo/memos:canary
          ports:
            - containerPort: 5230
          volumeMounts:
            - name: memos-data
              mountPath: /var/opt/memos
      volumes:
        - name: memos-data
          persistentVolumeClaim:
            claimName: memos-pvc
