workloads/memos/service.yml
apiVersion: v1
kind: Service
metadata:
  name: memos-service
spec:
  selector:
    app: memos
  ports:
    - name: web
      protocol: TCP
      port: 5230
      targetPort: 5230
